This should fix a problem where some images have white space around it.

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,12 @@
 
 }
 
+html, body {
+    background-color: #000000;
+    width: 100%;
+    overflow-x: hidden;
+}
+
 /*Standard size*/
 .navbar {
     background: #000000;
@@ -101,7 +107,7 @@
     margin: 0 auto;
     background-color: #000000;
     z-index: 1;
-    /* width: 100%; */
+    width: 100%;
 }
 
 .main__content h1 {
@@ -201,6 +207,14 @@
 
 .main__content{
         text-align: center;
+}
+
+.main__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background-color: #000000;
 }
 
 .main__containerT {
@@ -443,6 +457,17 @@
 }
 .main__img-containerP{
     text-align: center;
+    background-color: #000000;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.main__img-containerP video,
+.main__img-containerP img {
+    background-color: #000000;
+    display: block;
+    margin: 0 auto;
 }
 
 #main__imgP{
